# stiglab

./: .dockerignore  .gitignore  BOOTSTRAP_PROMPT.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  railpack.json  railway.toml  skills-lock.json
.claude/skills/: agent-browser.md  web-testing.md
.claude/skills/issue-spec/: SKILL.md
.claude/skills/issue-spec/references/: spec-format.md
.claude/skills/issue-spec/templates/: issue-spec-template.md
.claude/skills/web-testing/: SKILL.md
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  web-tests.yml
crates/stiglab/: Cargo.toml
crates/stiglab-agent/: Cargo.toml
crates/stiglab-agent/src/: config.rs  connection.rs  main.rs
crates/stiglab-agent/src/session/: manager.rs  process.rs
crates/stiglab-core/: Cargo.toml
crates/stiglab-core/src/: adapter.rs  error.rs  event.rs  lib.rs  node.rs  protocol.rs  session.rs  task.rs
crates/stiglab-server/: Cargo.toml
crates/stiglab-server/src/: auth.rs  config.rs  db.rs  handler.rs  lib.rs  main.rs  spine.rs  state.rs
crates/stiglab-server/src/routes/: auth.rs  credentials.rs  mod.rs  nodes.rs  sessions.rs  shaping.rs  tasks.rs
crates/stiglab-server/src/ws/: agent.rs
crates/stiglab/src/: main.rs  runner.rs
docker/: agent.Dockerfile  server.Dockerfile
docker/agent/: Dockerfile
docker/server/: Dockerfile
specs/: 001-stream-json-session-execution.md
