[workspace]
members = [
    "crates/stiglab-core",
    "crates/stiglab-server",
    "crates/stiglab-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
