[package]
name = "stiglab-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stiglab-core = { path = "../stiglab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hostname = "0.4"
