[package]
name = "stiglab-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stiglab-core = { path = "../stiglab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
