[package]
name = "stiglab"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stiglab-core = { path = "../stiglab-core" }
stiglab-server = { path = "../stiglab-server" }
stiglab-agent = { path = "../stiglab-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hostname = "0.4"
